<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/no_connexion_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="@string/no_connexion"
        android:textSize="@dimen/title_screen"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/lien_page_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_view_no_adresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/no_adresses_ft"
            />

        <Button
            android:id="@+id/button_page_facebook"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_no_adresses"
            android:layout_centerHorizontal="true"
            android:text="@string/consulter_facebook"
            android:textColor="@color/blue"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/size_flat_button" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/framelayout_map_ft"/>


</RelativeLayout>